# Meta information: PyPI and pip

[project]
name = 'KDE-diffusion'
authors = [{name='John Hennig'}]
license = {file='license.txt'}
keywords = ['kernel density estimation', 'statistics']
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Programming Language :: Python :: 3',
    'Operating System :: OS Independent',
    'Topic :: Scientific/Engineering :: Information Analysis',
    'Intended Audience :: Science/Research',
    'Natural Language :: English',
    'License :: OSI Approved :: MIT License',
]
readme = 'pypi.md'
requires-python = '>=3.6'
dependencies = ['NumPy', 'SciPy']
dynamic = ['version', 'description']

[project.optional-dependencies]
docs = ['Sphinx', 'Furo', 'MyST-parser', 'Commonmark']
test = ['pyTest', 'pyTest-cov', 'coverage-badge', 'Flake8', 'pyproject-Flake8']

[project.urls]
Documentation = 'https://kde-diffusion.readthedocs.io'
Source = 'https://github.com/john-hen/kde-diffusion'


# Wheel builder: flit

[build-system]
requires = ['flit_core >=2,<4']
build-backend = 'flit_core.buildapi'

[tool.flit.module]
name = 'kde_diffusion'


# Code linter: Flake8 (via pyproject-Flake8)

[tool.flake8]
exclude = [
    '.git',
    '__pycache__',
    'develop',
]
ignore = [
    'E127', 'E128',
    'E201', 'E202',
    'E221', 'E222',
    'E226',
    'E231',
    'E241',
    'E251',
    'E261',
    'E271', 'E272',
    'E302', 'E305',
    'E402',
    'W503',
    'E741',
]
per-file-ignores = ['__init__.py:F401']


# Test runner: pyTest

[tool.pytest.ini_options]
addopts = '--verbose'
testpaths = ['tests']
filterwarnings = ['ignore::UserWarning']


# Code coverage: Coverage.py

[tool.coverage.run]
source = ['kde_diffusion/']
relative_files = true

[tool.coverage.report]
exclude_lines = ['pragma: no cover']
