# Project meta information

[project]
name = 'KDE-diffusion'
authors = [{name='John Hennig'}]
version = '1.0.4'
description = 'Kernel density estimation via diffusion in 1d and 2d'
keywords = ['kernel density estimation', 'statistics']
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Programming Language :: Python :: 3',
    'Operating System :: OS Independent',
    'Topic :: Scientific/Engineering :: Information Analysis',
    'Intended Audience :: Science/Research',
]
license = 'MIT'
license-files = ['license.txt']
readme = 'PyPI.md'

requires-python = '>= 3.6'
dependencies = [
    'NumPy',
    'SciPy',
]

[project.optional-dependencies]
dev = [
    'pyTest',
    'pyTest-cov',
    'coverage-badge',
    'Flake8-pyproject',
    'Sphinx',
    'Furo',
    'MyST-parser',
    'Commonmark',
    'Flit',
]

[project.urls]
Documentation = 'https://kde-diffusion.readthedocs.io'
Source = 'https://github.com/john-hen/kde-diffusion'


# Build backend: Flit

[build-system]
requires      = ['flit_core >= 3.11']
build-backend = 'flit_core.buildapi'

[tool.flit.module]
name = 'kde_diffusion'


# Code linter: Flake8

[tool.flake8]
exclude = [
    'local',
    'ignore',
]
ignore = [
    'E127',        # Continuation line over-indented for visual indent.
    'E128',        # Continuation line under-indented for visual indent.
    'E201',        # Whitespace after '('.
    'E202',        # Whitespace before ')'.
    'E221',        # Multiple spaces before operator.
    'E222',        # Multiple spaces after operator.
    'E226',        # Missing whitespace around arithmetic operator.
    'E231',        # Missing whitespace after ',', ';', or ':'.
    'E241',        # Multiple spaces after ','.
    'E251',        # Unexpected spaces around keyword / parameter equals.
    'E261',        # At least two spaces before inline comment.
    'E271',        # Multiple spaces after keyword.
    'E272',        # Multiple spaces before keyword.
    'E402',        # Module level import not at top of file.
    'E741',        # Ambiguous variable name 'l'.
    'W503',        # Line break occurred before a binary operator.
]
per-file-ignores = [
    '__init__.py:F401',      # Imported but unused.
]


# Test runner: pyTest

[tool.pytest.ini_options]
addopts  = '--verbose'
testpaths = ['tests']


# Code coverage: Coverage.py

[tool.coverage.run]
source         = ['kde_diffusion/']
relative_files = true

[tool.coverage.report]
exclude_lines = ['pragma: no cover']
